tests/paczka1/fuzzy1/42175121.err
Error in line 21: A981 S158 5,3
Error in line 35: Yfb S158 15,5
